--- a/escop-layout.tex
+++ b/escop-layout.tex
@@ -24,7 +24,7 @@
 
 \newcommand{\colbreak}{\vfill\null\columnbreak}
 
-\newcommand{\unilogo}{\includegraphics[width=0.4\textwidth]{Logo_ESCoP2017}}
+\newcommand{\unilogo}{\includegraphics[width=0.4\textwidth]{picts/Logo_ESCoP2017}}
 
 \newcommand{\uni}[1]{\ensuremath{^{\textrm{\tiny#1}}}}
 \newcommand{\reference}{\par\noindent\small}
