updates &  author index

--- a/escop-contributions-preliminary.tex
+++ b/escop-contributions-preliminary.tex
@@ -23,7 +23,7 @@
 \thispagestyle{empty}
 \begin{center}
 \unilogo\\
-\Huge\bf Potsdam\\ List of Contributions \\
+\Huge\bfseries Potsdam\\ List of Contributions \\
 \end{center}
 
 \input{"contribution_overview.incl.tex"}
