--- a/escop-layout.tex
+++ b/escop-layout.tex
@@ -18,7 +18,7 @@
 \pagestyle{scrheadings}
 \ihead[]{}
 \chead[]{}
-\ohead[\pagemark]{\it\pagemark}
+\ohead[\pagemark]{\itshape\pagemark}
 \ifoot[]{}
 \cfoot[]{}
 \ofoot[]{}
@@ -33,7 +33,7 @@
 
 \newcommand{\overviewdaybegin}[1]{
 	%\newpage
-    \chead[]{\sl #1}
+    \chead[]{\slshape #1}
 	\vspace{4ex}\begin{center}
 	\LARGE\bfseries{\scshape{#1}}
 	\end{center}	}
@@ -56,7 +56,7 @@
 
 \newcommand{\overiewsessionbegin}[5]{ 
             % id-range, type, room, title, info (e.g. chair)
-			\vspace{3ex}\par\noindent {\large\bf #3: #2 \\#4} #5
+			\vspace{3ex}\par\noindent {\large\bfseries #3: #2 \\#4} #5
             
 			\begin{description}}
 
@@ -69,10 +69,10 @@
 
 
 \newcommand{\postershort}[3]{
-	\item[\bf -] #2 {\sl #3}}
+	\item[\bfseries -] #2 {\slshape #3}}
 
 \newcommand{\talkshort}[5]{
-	\item[\bf #2-#3] #4 {\sl #5}}
+	\item[\bfseries #2-#3] #4 {\slshape #5}}
 
 \newcommand{\escopabstract}[7]{
     %id, time, title, author, affiliations, email
@@ -80,9 +80,9 @@
     \begin{centering}
     {$\cdot\cdot$~~#2 (#1)~~$\cdot\cdot$} \par
     \end{centering}
-    {\noindent\bf #5}. %\vspace{1ex}\par
-    {\sc #3}; %\vspace{1ex} \par
-    {\sl #4}\par
+    {\noindent\bfseries #5}. %\vspace{1ex}\par
+    {\scshape #3}; %\vspace{1ex} \par
+    {\slshape #4}\par
     #6 \par
     %\end{minipage}\hfill\hbox{}
     {\noindent Email: \vspace{1em} #7\par}
@@ -91,14 +91,14 @@
 
 \newcommand{\abstractsessionbegin}[3]{
     \vspace{3ex}\begin{center}
-    \bf #3 \\ #2, #1
+    \bfseries #3 \\ #2, #1
     \end{center}
     \par
 }
 
 \newcommand{\abstractposterbegin}[3]{
     \vspace{3ex}\begin{centering}
-    \bf #3 \\ #2, #1
+    \bfseries #3 \\ #2, #1
     \end{centering}
     \par
 }
