--- a/escop-abstracts.tex
+++ b/escop-abstracts.tex
@@ -1,9 +1,9 @@
 \documentclass[%
-  a4paper,
+  b5paper,
   pagesize,%         write pagesize to DVI or PDF
   1headlines,%       need only one line for the head
   8pt,%             use this font size
-  DIV=16,
+  DIV=18,
   BCOR=12mm,
   twoside,
   %twocolumn,
@@ -17,6 +17,19 @@
 \SetWatermarkScale{0.3}
 \SetWatermarkText{Draft}
 
+\usepackage{imakeidx}
+\usepackage[itemlayout=singlepar]{idxlayout}
+\makeindex
+
+
+\setkeys{ila}{columns=3} 
+\setkeys{ila}{rule=0pt} 
+\setkeys{ila}{columnsep=1em} 
+%\setkeys{ila}{font=footnotesize} 
+
+\makeindex
+
+
 \begin{document}
 \sloppy
 
@@ -24,12 +37,17 @@
 \thispagestyle{empty}
 \begin{center}
 \unilogo\\
-\Huge\bf Potsdam\\ Abstracts \\
+\Huge\bfseries Potsdam\\ Abstracts \\
 \end{center}
 
 
 \begin{multicols}{2}
 \input{"abstracts.incl.tex"}
-\end{multicols}{2}
+\end{multicols}
+
+\newpage
+\renewcommand{\indexname}{Author Index}
+
+\printindex
 
 \end{document}
