--- a/escop_tex/overview.tex
+++ b/escop_tex/overview.tex
@@ -1,59 +1,12 @@
-\documentclass[%
-  b5paper,
-  pagesize,%         write pagesize to DVI or PDF
-  1headlines,%       need only one line for the head
-  8pt,%             use this font size
-  DIV=18,
-  BCOR=12mm,
-  twoside,
-  %twocolumn,
-  smallheadings,
-  %halfparskip,
-  %liststotoc,
-]{scrartcl}
-\input{escop-layout.tex}
-\usepackage{multirow}
-\usepackage{draftwatermark}
-\SetWatermarkScale{0.3}
-\SetWatermarkText{Draft}
-
-\begin{document}
-
-
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%% compact overview %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\newcolumntype{N}{@{}m{0pt}@{}} %workaround
-\newcolumntype{P}[1]{>{\centering\arraybackslash}p{#1}}
-\begin{table}[]
-\sffamily\centering
-\renewcommand{\arraystretch}{1.5}%
-\begin{tabular}{|>{\columncolor{TabColor}}l*{4}{P{23mm}}|} \hline 
-%\begin{tabular}{| c c c c c |}
-\rowcolor{TabColor}  & \bfseries Sunday\par 3 September & \bfseries Monday\par 4 September & \bfseries Tuesday\par 5 September & \bfseries Wednesday\par 6 September  \\\hline
-8:00 -- 9:00   &                   & Registration & Registration & Registration \\ \hline
-9:00 -- 10:40  &                   & Talks &  Talks   & Talks \\\cline{1-1}\cline{3-5}
-10:40 -- 12:00 & \multirow{6}{20mm}{\centering 9:00 -- 16:00 Registration \& Satellite Events} & Poster II & Poster III  & Poster IV \\\cline{1-1}\cline{3-5}
-12:00 -- 12:50 &                   &  Lunch & Lunch   & Lunch  \\\cline{1-1}\cline{3-5}
-12:50 -- 14:30 &                   & Talks &  Talks   & Talks  \\\cline{1-1}\cline{3-5}
-14:30 -- 14:40 &                   & Coffe & Coffe & Coffe \\\cline{1-1}\cline{3-5}
-14:40 -- 16:20 &                   & Symposia & Symposia & Symposia \\\hline
-16:20 -- 16:35 &  16.00 Opening \& \par Welcome Notes & Coffe & Coffe & Coffe   \\\hline
-16:35 -- 18:15 &  17:15 Keynote \par Pulvermüller & Symposia & Symposia & Symposia \\\hline
-18:30 -- 19:30 &   18:15 Poster I & Broadbent\par Lecture de Gelder  &  & Bertelson Lecture\par Banissy \\\hline
-19:30 -- 20:30 &  19:30 Opening Reception  & ESCoP Business Meeting & 19:00\par Social Event\par (Boat Cruise) & 20$^\mathrm{th}$ ESCoP Celebration \\\hline
-20:30          &                   &  &  & Science Slam  \\[5ex]\hline
-\end{tabular}
-\end{table}
-\newpage
-
 
 \input{overview.incl.tex}
-%%%%% DAY A
+\newpage
 
+%%%%% OVERVIEW DAY A
 
 %%%%% DAY B
-\begin{sidewaystable}
+\rotatebox{90}{
+\begin{varwidth}{\textheight}
 \sffamily\centering
 {\Huge\bfseries \dayB}\par\vspace{5mm}
 \begin{tabular}{| >{\columncolor{TabColor}}p{10mm} | p{28mm} | p{28mm} | p{28mm} | p{28mm} | p{28mm} | p{28mm} |}
@@ -66,11 +19,12 @@
 \rf{\dayBtimeD} & \cf{\dayBroomAtimeD} & \cf{\dayBroomBtimeD} & \cf{\dayBroomCtimeD} & \cf{\dayBroomDtimeD} & \cf{\dayBroomEtimeD} & \cf{\dayBroomFtimeD}  \\[17mm] \hline
 \rf{\dayBtimeE} & \cf{\dayBroomAtimeE} & \cf{\dayBroomBtimeE} & \cf{\dayBroomCtimeE} & \cf{\dayBroomDtimeE} & \cf{\dayBroomEtimeE} & \cf{\dayBroomFtimeE}  \\[17mm] \hline
 \end{tabular}
-\end{sidewaystable} 
+\end{varwidth}}
 
 
 %%%%% DAY C (one room less)
-\begin{sidewaystable}
+\rotatebox{90}{
+\begin{varwidth}{\textheight}
 \sffamily\centering
 {\Huge\bfseries \dayC}\par\vspace{5mm}
 \begin{tabular}{| >{\columncolor{TabColor}}p{10mm} | p{28mm} | p{28mm} | p{28mm} | p{28mm} | p{28mm} |}
@@ -83,11 +37,12 @@
 \rf{\dayCtimeD} & \cf{\dayCroomAtimeD} & \cf{\dayCroomBtimeD} & \cf{\dayCroomCtimeD} & \cf{\dayCroomDtimeD} & \cf{\dayCroomFtimeD}  \\[17mm] \hline
 \rf{\dayCtimeE} & \cf{\dayCroomAtimeE} & \cf{\dayCroomBtimeE} & \cf{\dayCroomCtimeE} & \cf{\dayCroomDtimeE} & \cf{\dayCroomFtimeE}  \\[17mm] \hline
 \end{tabular}
-\end{sidewaystable} 
+\end{varwidth}}
 
 %%%%% DAY D (one room less)
 
-\begin{sidewaystable}
+\rotatebox{90}{
+\begin{varwidth}{\textheight}
 \sffamily\centering
 {\Huge\bfseries \dayD}\par\vspace{5mm}
 \begin{tabular}{| >{\columncolor{TabColor}}p{10mm} | p{28mm} | p{28mm} | p{28mm} | p{28mm} | p{28mm} |}
@@ -100,10 +55,7 @@
 \rf{\dayDtimeD} & \cf{\dayDroomAtimeD} & \cf{\dayDroomBtimeD} & \cf{\dayDroomCtimeD} & \cf{\dayDroomDtimeD} & \cf{\dayDroomFtimeD}  \\[17mm] \hline
 \rf{\dayDtimeE} & \cf{\dayDroomAtimeE} & \cf{\dayDroomBtimeE} & \cf{\dayDroomCtimeE} & \cf{\dayDroomDtimeE} & \cf{\dayDroomFtimeE}  \\[17mm] \hline
 \end{tabular}
-\end{sidewaystable} 
+\end{varwidth}}
 
+\newpage
 
-
-
-
-\end{document}
