--- a/escop-demo.tex
+++ b/escop-demo.tex
@@ -17,7 +17,6 @@
 \SetWatermarkScale{0.3}
 \SetWatermarkText{Preliminary Schedule}
 
-
 \begin{document}
 \sloppy
 
@@ -30,9 +29,9 @@
 
 \input{"escop_tex/overview.tex"}
 
-\input{"escop_tex/contributions.tex"}
+%\input{"escop_tex/contributions.tex"}
 
-\input{"escop_tex/abstracts.tex"}
+%\input{"escop_tex/abstracts.tex"}
 
 
 \end{document}
