--- a/escop-demo.tex
+++ b/escop-demo.tex
@@ -1,5 +1,5 @@
 \documentclass[%
-  B5paper,
+  b5paper,
   pagesize,%         write pagesize to DVI or PDF
   1headlines,%       need only one line for the head
   8pt,%             use this font size
