--- a/escop_tex/overview.tex
+++ b/escop_tex/overview.tex
@@ -22,10 +22,13 @@
 %%%%% DAY B
 \newpage
 {\centering\Huge\bfseries \dayB\par\vspace{5mm}}
-\rotatebox{90}{
+\enlargethispage{25mm}
+\vfill
+\hspace{-20mm}\rotatebox{90}{
 \begin{varwidth}{\textheight}
 \sffamily
-\begin{tabular}{| >{\columncolor{TabColor}}p{10mm} | p{28mm} | p{28mm} | p{28mm} | p{28mm} | p{28mm} | p{28mm} |}
+\begin{tabular}{| >{\columncolor{TabColor}}p{10mm} | p{28mm} | p{28mm} | 
+p{28mm} | p{28mm} | p{28mm} | p{28mm} |}
 \hline
 \rowcolor{TabColor}  &  \hf{\dayBroomA}  &  \hf{\dayBroomB} & \hf{\dayBroomC} & \hf{\dayBroomD} & \hf{\dayBroomE} & \hf{\dayBroomF} \\ \hline
 \addrow{8:00 -- 9:00}{6}{Registration {\itshape (Foyer)}}
@@ -46,10 +49,10 @@
 %%%%% DAY C (one room less)
 \newpage
 {\centering\Huge\bfseries \dayC\par\vspace{5mm}}
-\rotatebox{90}{
+\hspace{-20mm}\rotatebox{90}{
 \begin{varwidth}{\textheight}
 \sffamily
-\begin{tabular}{| >{\columncolor{TabColor}}p{10mm} | p{28mm} | p{28mm} | p{28mm} | p{28mm} | p{28mm} |}
+\begin{tabular}{| >{\columncolor{TabColor}}p{9mm} | p{28mm} | p{28mm} | p{28mm} | p{28mm} | p{28mm} |}
 \hline
 \rowcolor{TabColor}  &  \hf{\dayCroomA}  &  \hf{\dayCroomB} & \hf{\dayCroomC} & \hf{\dayCroomD} & \hf{\dayCroomF} \\ \hline
 \addrow{8:00 -- 9:00}{5}{Registration {\itshape (Foyer)}}
@@ -68,10 +71,10 @@
 %%%%% DAY D (one room less)
 \newpage
 {\centering\Huge\bfseries \dayD\par\vspace{5mm}}
-\rotatebox{90}{
+\hspace{-15mm}\rotatebox{90}{
 \begin{varwidth}{\textheight}
-\sffamily
-\begin{tabular}{| >{\columncolor{TabColor}}p{10mm} | p{28mm} | p{28mm} | p{28mm} | p{28mm} | p{28mm} |}
+\sffamily\small
+\begin{tabular}{| >{\columncolor{TabColor}}p{9mm} | p{28mm} | p{28mm} | p{28mm} | p{28mm} | p{28mm} |}
 \hline
 \rowcolor{TabColor}  &  \hf{\dayDroomA}  &  \hf{\dayDroomB} & \hf{\dayDroomC} & \hf{\dayDroomD}  & \hf{\dayDroomF} \\ \hline
 \addrow{8:00 -- 9:00}{5}{Registration {\itshape (Foyer)}}
