titlecase, minipage contributions

--- a/escop-demo.tex
+++ b/escop-demo.tex
@@ -27,9 +27,9 @@
 \end{center}
 \newpage
 
-\input{"escop_tex/overview.tex"}
+%\input{"escop_tex/overview.tex"}
 
-%\input{"escop_tex/contributions.tex"}
+\input{"escop_tex/contributions.tex"}
 
 %\input{"escop_tex/abstracts.tex"}
 
