--- a/escop_tex/overview.tex
+++ b/escop_tex/overview.tex
@@ -4,16 +4,17 @@
 \newcolumntype{P}[1]{>{\centering\arraybackslash}p{#1}}
 
 %%%%% OVERVIEW DAY A
-{\centering\Huge\bfseries \dayA\par\vspace{5mm}}
+{\centering\Large\sf\bfseries\dayA\par\vspace{5mm}}
 \begin{center} \sffamily
 \renewcommand{\arraystretch}{1.5}%
 \begin{tabular}{| >{\columncolor{TabColor}}p{10mm} | P{80mm} |}
 \hline
 \rowcolor{TabColor}  &  Session \\ \hline
-\vspace{-3ex}\rf{8:00 -- 16:00} &  Registration {\itshape (Foyer)} and \par Satellite Events {\itshape (Lecture Rooms)} \\\hline
+\vspace{-3ex}\rf{09:00 -- 16:00} &  Registration {\itshape (Foyer)} and \par Satellite Events {\itshape (Lecture Rooms)} \\\hline
 \vspace{-3ex}\rf{16:00 -- 17:00} &   Opening and Welcome Notes \par{\itshape (H3--4)} \\\hline
 \vspace{-3ex}\rf{17:15 -- 18:15} &  Keynote: Friedemann Pulvermüller \par{\itshape (H3--4)} \\\hline
 \vspace{-3ex}\rf{18:15 -- 19:30} &  \dayApostertimeA \\\hline
+\vspace{-3ex}\rf{19:30 } & Opening Reception \\\hline
 \end{tabular}
 \end{center}
 
@@ -21,7 +22,7 @@
 
 %%%%% DAY B
 \newpage
-{\centering\Huge\bfseries \dayB\par\vspace{5mm}}
+{\centering\Large\sf\bfseries\dayB\par\vspace{5mm}}
 \enlargethispage{25mm}
 \vfill
 \hspace{-20mm}\rotatebox{90}{
@@ -48,11 +49,11 @@ p{28mm} | p{28mm} | p{28mm} | p{28mm} |}
 
 %%%%% DAY C (one room less)
 \newpage
-{\centering\Huge\bfseries \dayC\par\vspace{5mm}}
+{\centering\Large\sf\bfseries\dayC\par\vspace{5mm}}
 \hspace{-20mm}\rotatebox{90}{
 \begin{varwidth}{\textheight}
 \sffamily
-\begin{tabular}{| >{\columncolor{TabColor}}p{9mm} | p{28mm} | p{28mm} | p{28mm} | p{28mm} | p{28mm} |}
+\begin{tabular}{| >{\columncolor{TabColor}}p{10mm} | p{28mm} | p{28mm} | p{28mm} | p{28mm} | p{28mm} |}
 \hline
 \rowcolor{TabColor}  &  \hf{\dayCroomA}  &  \hf{\dayCroomB} & \hf{\dayCroomC} & \hf{\dayCroomD} & \hf{\dayCroomF} \\ \hline
 \addrow{8:00 -- 9:00}{5}{Registration {\itshape (Foyer)}}
@@ -70,7 +71,7 @@ p{28mm} | p{28mm} | p{28mm} | p{28mm} |}
 
 %%%%% DAY D (one room less)
 \newpage
-{\centering\Huge\bfseries \dayD\par\vspace{5mm}}
+{\centering\Large\sf\bfseries \dayD\par\vspace{5mm}}
 \hspace{-15mm}\rotatebox{90}{
 \begin{varwidth}{\textheight}
 \sffamily\small
