--- a/escop_tex/layout.tex
+++ b/escop_tex/layout.tex
@@ -74,10 +74,10 @@
 
 
 \newcommand{\postershort}[3]{
-	\item[\bfseries -] #2 {\slshape #3}}
+	\item[\bfseries #1] #2 {\slshape #3}}
 
 \newcommand{\talkshort}[5]{
-	\item[\bfseries #2 -- #3] #4 {\slshape #5}}
+	\item[\bfseries #2 -- #3] #4 {\slshape #5} (#1) }
 
 \newcommand{\escopabstract}[7]{
     %id, time, title, author, affiliations, email
