talks first (II)

--- a/escop_tex/abstracts.tex
+++ b/escop_tex/abstracts.tex
@@ -5,6 +5,8 @@
 \begin{multicols}{2}
 \input{"abstracts.incl.tex"}
 \end{multicols}
+
 \newpage
 \renewcommand{\indexname}{Author Index}
+\addcontentsline{toc}{section}{\indexname}
 \printindex
